3주차 과제 큐, 덱, 스택의 활용

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "list": "c",
         "vector": "c",
-        "xstring": "c"
+        "xstring": "c",
+        "deque": "cpp"
     }
 }
